--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
   <title> Math Quiz Game! </title>
-
+<h1> The Math Quiz game! </h1>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
@@ -12,7 +12,7 @@
 <div id="player_1"> </div>
 <div id="player_2"> </div>
 <body>
-  <div class=" col-lg-4 col-sm-8 col-xs-11 login_div1">
+  <div class=" col-lg-4 col-sm-8 col-xs-11 login_div1" >
 		<h3> Player 1 login for the game </h3>
 		<label> User name; </label>
 		<input type="text" id="player1_name_input" class="form-control" placeholder="Player 1 Name">
@@ -22,10 +22,11 @@
 			<h3> Player 2 login for the game </h3>
 			<label> User name; </label>
 			<input type="text" id="player2_name_input" class="form-control" placeholder="Player 2 Name">
+		
 			<br> 
+			<button style="width:30%" class="btn btn-primary" onclick="addUser()"> Log in</button>
 		</div>
-
-<button style="width:30%" class="btn btn-primary" onclick="addUser()"> Log in</button>
+    
 </body>
 
 
