--- a/gamepage.html
+++ b/gamepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Guess The Word</title>
+	<title>Math Quiz Game!</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -11,31 +11,43 @@
 <link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <body id="math">
-
+	<h4 id="player1_name"> </h4>
+	<span id="player1_score"> </span>
+	<br> 
+	<h4 id="player2_name"> </h4>
+	<span id="player2_score"> </span>
+	<div class="container">
 <div class="container">
-	<center>
+	<>
 		<h1> Math Quiz Game! </h1>
-		<h3 id= "player_question"> </h3>
-   <div id="output" class= "col-lg-6"> </div>
-
-
+		<h3 id= "player_question"> Question Turn</h3>
+		<h3 id= "player_answer"> Answer Turn</h3>
+   <div id="output"> </div>
+	 <h4> x </h4>
+	 <br>
+	 "Answer"
+	 <input type="text" id="input_check_box">
+	 <br>
+	 <br>
+	 <button class="btn btn-info" onclick="check()"> Check </button>
+	 
 		<br>
 		<br>
-	<div id="mathplate" btn btn-info> </div>
-  <h3> Question turn- </h3>
-  <h3> Answer turn- </h3>
+
 		<label> First Number- <b style="color: coral">Put a number in the box below to get a math problem! </b>
 			</label>
-			<input type="text" id="word" class="form-control" placeholder="Number">
+			<input type="text" id="number1" class="form-control" placeholder="Number1">
       <label>Second Number - <b style="color: coral">Put a number in the box below to get a math problem! </b>
 			</label>
-			<input type="text" id="word" class="form-control" placeholder="Number">
+			<input type="text" id="number2" class="form-control" placeholder="Number2">
 
 		<br>
 <button onclick= "send()" class="btn btn-info" style="width: 30%;"> send </button>
+	 </div>
+	
 	</center>
 </div>
 
-<script src="game_page.js"></script>
+<script src="gamepage.js"></script>
 </body>
 </html>
