--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 <div id="player_1"> </div>
 <div id="player_2"> </div>
 <body>
-	<h4 id="player1_name"> </h4> <span id="player1_score"> </span>
+	<h4 id="player1_name"> </h4> 
+	<span id="player1_score"> </span>
 	<br> 
-	<h4 id="player2_name"> </h4> <span id="player2_score"> </span>
+	<h4 id="player2_name"> </h4> 
+	<span id="player2_score"> </span>
 	<div class="container"> 
+	
 		<center> 
 			<h2 style="color : white;"> The Math Quiz Game </h2>
 			
